@startuml

title US18 - Class Diagram

class DealAnalysesUI {
  -controller: DealAnalysesController
  +getRegressionModel (param, significanceLevel, valueToPredict)
  +getParameters()
}

class DealAnalysesController {
  -repositories: Repositories
  -publishedAnnouncementRepository: PublishedAnnouncementRepository
  -regressionModel: RegressionModel
  -mapper: RegressionMapper
  +getPublishedAnnouncementRepository()
  +getParametersMatrix(parameter)
  +create(parameters)
  +getRegressionModel(param, significanceLevel, valueToPredict)
  +toDTO(regressionModel)
  +predictMulti(parameters)
  +predictSimple(parameter)
}

class Repositories {
  <<repositories>>
  +getInstance()
  +getPublishedAnnouncementRepository()
}

class PublishedAnnouncementRepository {
  +getParametersMatrix(parameter)
}

class PublishedAnnouncement {
  +getPublishedAnnouncements(): List<PublishedAnnouncement>
}

class RegressionModel {
  +create(parameters)
  +getRegressionModel(param, significanceLevel, valueToPredict)
}

class MultiLinear {
  +predictMulti(parameters)
}

class SingleLinear {
  +predictSimple(parameter)
}

class RegressionMapper {
  +toDTO(prediction, report)
}

class RegressionDTO {
  -report
  -prediction
  +create(prediction, report)
}

DealAnalysesUI --> DealAnalysesController
DealAnalysesController ..> Repositories
DealAnalysesController ..> PublishedAnnouncementRepository
DealAnalysesController --> RegressionModel
DealAnalysesController --> MultiLinear
DealAnalysesController --> SingleLinear
DealAnalysesController --> RegressionMapper
RegressionMapper --> RegressionDTO
Repositories ..> PublishedAnnouncementRepository : PublishedAnnouncementRepository
PublishedAnnouncementRepository --> PublishedAnnouncement


@enduml
